--- a/index.html
+++ b/index.html
@@ -789,11 +789,11 @@
     <section class="final-cta">
         <div class="container animated">
             <h2>⏰ Não Perca Esta Oportunidade!</h2>
-            <p>Nossos preços sobem na próxima semana. Garanta sua montagem com desconto!</p>
+            <p>Garanta um montador de móveis em valparaíso de goiás e regiões do entorno agora mesmo!.</p>
             
             <div class="cta-buttons">
                 <a href="https://wa.me/5561998865417?text=Quero%20garantir%20meu%20desconto%20AGORA!%20Preciso%20montar%20móveis%20em%20Brasília." class="cta-primary">
-                    🔥 GARANTIR DESCONTO AGORA
+                    🗣 ENVIAR MENSAGEM
                 </a>
                 <a href="tel:+5561998865417" class="cta-secondary">
                     📞 LIGAR DIRETO
