--- a/index.html
+++ b/index.html
@@ -694,21 +694,20 @@
     <section class="negotiation">
         <div class="container">
             <div class="negotiation-content animated">
-                <h2>🎯 Negocie Um Desconto!</h2>
+                <h2>Precisando de um móvel novo? 🤔</h2>
                 <p class="negotiation-subtitle">
-                    Fale direto com nosso atendente e garanta condições especiais. 
-                    Temos descontos para múltiplos móveis, clientes novos e muito mais!
+                   Na loja parceira da MontaTech Brasil você encontra os melhores produtos com entrega rápida e garantia Magalu. 👉 Escolha, compre e já agende sua montagem com a gente!
                 </p>
                 
                 <div class="discount-badges">
-                    <div class="discount-badge">💰 ATÉ 25% OFF</div>
-                    <div class="discount-badge">🏠 COMBO CASA NOVA</div>
-                    <div class="discount-badge">⚡ DESCONTO RELÂMPAGO</div>
+                    <div class="discount-badge">💰 DESCONTO ESPECIAL</div>
+                    <div class="discount-badge">🏠 MÓVEIS + MONTAGEM</div>
+                    <div class="discount-badge">⚡ ENTREGA RÁPIDA</div>
                 </div>
                 
-                <a href="https://wa.me/5561998865417?text=Oi!%20Vi%20a%20tabela%20de%20preços%20e%20quero%20negociar%20um%20desconto.%20Podem%20me%20ajudar?" class="negotiation-cta">
-                    <span class="icon">💬</span>
-                    FALAR COM ATENDENTE AGORA
+                <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis">
+                    <span class="icon">🚀 </span>
+                    VER PRODUTOS RECOMENDADOS
                 </a>
             </div>
         </div>
