--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 <body>
     <!-- Urgency Banner -->
     <div class="urgency-banner">
-        🔥 <span class="blink">PROMOÇÃO LIMITADA</span> - Fale conosco AGORA e ganhe até 25% OFF! ⏰
+        🚀 <span class="blink">DESCONTO ESPECIAL</span> - Compre Online No Parceiro Magalu e Ganhe 10% OFF! 💰
     </div>
 
     <!-- Header -->
