--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
     <section class="negotiation">
         <div class="container">
             <div class="negotiation-content animated">
-                <h2>Precisando de um móvel novo? 🤔</h2>
+                <h2>Precisando de Móveis Novos? 🤔</h2>
                 <p class="negotiation-subtitle">
-                   Na loja parceira da MontaTech Brasil você encontra os melhores produtos com entrega rápida e garantia Magalu. 👉 Escolha, compre e já agende sua montagem com a gente!
+                   Na loja parceira da MontaTech Brasil você encontra os melhores produtos com entrega rápida e garantia Magalu. <p></p>👉 Escolha, compre e já agende sua montagem com a gente!
                 </p>
                 
                 <div class="discount-badges">
@@ -811,7 +811,7 @@
     <!-- Final CTA -->
     <section class="final-cta" id="contato">
         <div class="container animated">
-            <h2>⏰ Não Perca Esta Oportunidade!</h2>
+            <h2>🛠 Montagem de Móveis Profissional</h2>
             <p>Garanta um montador de móveis em valparaíso de goiás e regiões do entorno agora mesmo!.</p>
             
             <div class="cta-buttons">
