--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Confira nossos preços de montagem de móveis em valparaíso de goiás, Brasília DF e cidades do entorno. Fale conosco e garanta desconto especial! Atendimento personalizado.">
 
    <!-- FAVICON ADICIONADO AQUI -->
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="icon" href="img/favicon2.png" type="image/png">
     <link rel="apple-touch-icon" href="img/favicon2.png">
     
     <!-- Google tag (gtag.js) -->
