--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             <p>Garanta um montador de móveis em valparaíso de goiás e regiões do entorno agora mesmo!.</p>
             
             <div class="cta-buttons">
-                <a href="https://wa.me/5561998865417?text=Quero%20garantir%20meu%20desconto%20AGORA!%20Preciso%20montar%20móveis%20em%20Brasília." class="cta-primary" target="_blank" rel="noopener noreferrer">
+                <a href="https://wa.me/5561998865417?text=Quero%20garantir%20meu%20desconto%20AGORA!%20Preciso%20montar%20móveis." class="cta-primary" target="_blank" rel="noopener noreferrer">
                     🗣 ENVIAR MENSAGEM
                 </a>
                 <a href="tel:+5561998865417" class="cta-secondary">
