--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MontaTech Brasil Venda e Montagens de Móveis em Valparaíso de Goiás, DF e entorno</title>
+    <title>MontaTech Brasil | Venda e Montagens de Móveis em Valparaíso de Goiás, DF e entorno</title>
     <meta name="description" content="Confira nossos preços de montagem de móveis em valparaíso de goiás, Brasília DF e cidades do entorno. Fale conosco e garanta desconto especial! Atendimento personalizado.">
 
    <!-- FAVICON ADICIONADO AQUI -->
@@ -643,7 +643,7 @@
 <body>
     <!-- Urgency Banner -->
     <div class="urgency-banner">
-        🚀 <span class="blink">DESCONTO ESPECIAL</span> - Compre Online No Parceiro Magalu e Ganhe 10% OFF! 💰
+        🚀 <span class="blink">DESCONTO ESPECIAL</span> - Compre Seu Móvel Na Magalu e Ganhe 10% OFF na MONTAGEM! 💰
     </div>
 
     <!-- Header -->
