--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -4,14 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monta Tech Brasil - Cartão Virtual</title>
-    <link rel="stylesheet" href="style.css">
     <!-- Biblioteca de Ícones (Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <style>
+        /* Importa a fonte do Google Fonts */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+        /* Variáveis de Cores (Paleta) */
+        :root {
+            --azul-escuro: #0e3d71;
+            --azul-medio: #045ebf;
+            --dourado: #f6b401;
+            --verde-inovacao: #3BAF63;
+            --branco: #ffffff;
+            --background: #f4f4f4;
+        }
+
+        /* Estilos Gerais do Corpo da Página */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--background);
+            color: var(--azul-escuro);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        /* Estilo do Cartão Principal */
+        .card {
+            background-color: var(--branco);
+            width: 100%;
+            max-width: 400px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 30px;
+            box-sizing: border-box;
+            margin: 20px;
+        }
+
+        /* Logo no Cabeçalho */
+        header .logo {
+            max-width: 200px;
+            margin-bottom: 20px;
+        }
+
+        /* Seção do Perfil (Nome e Cargo) */
+        .profile h1 {
+            font-size: 2em;
+            font-weight: 700;
+            color: var(--azul-escuro);
+            margin: 0;
+        }
+
+        .profile p {
+            font-size: 1.1em;
+            color: var(--azul-medio);
+            font-weight: 600;
+            margin-top: 5px;
+        }
+
+        /* Seção de Informações de Contato */
+        .contact-info {
+            margin: 25px 0;
+        }
+
+        /* Botão Principal (WhatsApp) */
+        .contact-button {
+            display: inline-block;
+            background-color: var(--verde-inovacao);
+            color: var(--branco);
+            padding: 15px 30px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1em;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact-button:hover {
+            background-color: #2e8b57; /* Um tom de verde mais escuro */
+        }
+
+        .contact-button i {
+            margin-right: 10px;
+        }
+
+        .phone-number {
+            font-size: 0.9em;
+            color: #555;
+            margin-top: 10px;
+        }
+
+        /* Seção de Links para Redes Sociais */
+        .social-links {
+            margin: 25px 0;
+        }
+
+        .social-links a {
+            color: var(--azul-medio);
+            font-size: 2em;
+            margin: 0 15px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--dourado);
+        }
+
+        /* Área de Atendimento */
+        .service-area {
+            background-color: #eef7ff;
+            padding: 15px;
+            border-radius: 10px;
+            font-weight: 600;
+            color: var(--azul-escuro);
+            margin-top: 20px;
+        }
+        
+        /* Rodapé com QR Code */
+        .qr-code {
+            margin-top: 25px;
+        }
+
+        .qr-code img {
+            border: 5px solid var(--background);
+            border-radius: 10px;
+        }
+
+        .qr-code p {
+            font-size: 0.9em;
+            color: #777;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
     <div class="card">
         <header>
+            <!-- Lembre-se de criar a pasta 'img' e colocar a logo nela -->
             <img src="img/logo3.png" alt="Logo Monta Tech Brasil" class="logo">
         </header>
 
@@ -28,6 +164,7 @@
         </section>
 
         <section class="social-links">
+            <!-- SUBSTITUA 'SEU_USUARIO' E 'SEU_SITE' PELOS SEUS LINKS -->
             <a href="https://instagram.com/SEU_USUARIO" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://facebook.com/SEU_USUARIO" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://SEU_SITE.com" target="_blank" title="Nosso Site"><i class="fas fa-globe"></i></a>
@@ -38,6 +175,7 @@
         </section>
 
         <footer class="qr-code">
+             <!-- SUBSTITUA 'URL_DO_SEU_CARTAO' PELO LINK DO SEU CARTÃO ONLINE -->
             <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=URL_DO_SEU_CARTAO" alt="QR Code">
             <p>Aponte a câmera e salve meu contato!</p>
         </footer>
