--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -148,7 +148,7 @@
     <div class="card">
         <header>
             <!-- Lembre-se de criar a pasta 'img' e colocar a logo nela -->
-            <img src="img/logo3.png" alt="Logo Monta Tech Brasil" class="logo">
+            <img src="img/logo.png" alt="Logo Monta Tech Brasil" class="logo">
         </header>
 
         <section class="profile">
