--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <metva name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monta Tech Brasil - Cartão Virtual</title>
     <!-- Biblioteca de Ícones (Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -176,7 +176,7 @@
 
         <footer class="qr-code">
              <!-- SUBSTITUA 'URL_DO_SEU_CARTAO' PELO LINK DO SEU CARTÃO ONLINE -->
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=URL_DO_SEU_CARTAO" alt="QR Code">
+            <img src="img/qrcode.png" alt="QR Code para contato Monta Tech Brasil">
             <p>Aponte a câmera e salve meu contato!</p>
         </footer>
     </div>
