--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -182,16 +182,17 @@
         <!-- SEÇÃO DO PERFIL -->
         <header class="profile">
             <img src="img/logo.png" alt="Logo MontaTech Brasil" class="logo">
-            <h1>Ricardo Alexandre</h1>
-            <p>Montagem de Móveis Profissional</p>
+            <h1>MontaTech Brasil</h1>
+            <p>Ricardo Alexandre</p>
         </header>
 
         <!-- TEXTO INTRODUTÓRIO -->
         <section class="intro-text">
             <p>
-                💙 Montagem de Móveis Profissional ⚒️<br>
-                ✅ Residenciais e comerciais<br>
-                ✅ Valparaíso de Goiás, Brasília DF e regiões<br>
+                💙 MONTAGEM DE MÓVEIS ⚒️<br>
+                ✅ RESIDENCIAIS E COMERCIAIS<br>
+                ✅ Valparaíso de Goiás<br>
+                ✅ Brasília DF e regiões<br>
             </p>
         </section>
         
