--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -189,29 +189,28 @@
         <!-- TEXTO INTRODUTÓRIO -->
         <section class="intro-text">
             <p>
-                💙 MONTAGEM DE MÓVEIS ⚒️<br>
-                ✅ RESIDENCIAIS E COMERCIAIS<br>
-                ✅ Valparaíso de Goiás<br>
-                ✅ Brasília DF e regiões<br>
+                ⚒️ MONTAGEM DE MÓVEIS 💙<br>
+                ✅ VALPARAÍSO DE GOIÁS<br>
+                ✅ BRASÍLIA DF E ENTORNO<br>
             </p>
         </section>
         
         <!-- BOTÕES DE AÇÃO -->
         <section class="action-buttons">
             <a href="https://wa.me/5561998865417" class="btn-whatsapp" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-whatsapp"></i> Agende pelo WhatsApp
+                <i class="fab fa-whatsapp"></i> Agende Pelo WhatsApp
             </a>
             <a href="http://montatechbrasil.com.br/" class="btn-site" target="_blank" rel="noopener noreferrer">
                 <i class="fas fa-globe"></i> Visite Nosso Site
             </a>
             <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" class="btn-magalu" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-store"></i> Visite nossa lojinha da Magalu
+                <i class="fas fa-store"></i> Visite Nossa Loja da Magalu
             </a>
         </section>
 
         <!-- LINKS DE REDES SOCIAIS -->
         <section class="social-links">
-            <p>Siga-nos nas redes sociais, curta e compartilhe:</p>
+            <p>Siga-nos Nas Redes Sociais, Curta e Compartilhe:</p>
             <div class="social-icons">
                 <a href="https://www.instagram.com/montatechbrasil.montagens/" target="_blank" rel="noopener noreferrer" title="Instagram">
                     <i class="fab fa-instagram"></i>
