--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -183,14 +183,13 @@
         <header class="profile">
             <img src="img/logo.png" alt="Logo MontaTech Brasil" class="logo">
             <h1>MontaTech Brasil</h1>
-            <p>Ricardo Alexandre</p>
+            <p>⚒️ MONTAGEM DE MÓVEIS</p>
         </header>
 
         <!-- TEXTO INTRODUTÓRIO -->
         <section class="intro-text">
             <p>
-                ⚒️ MONTAGEM DE MÓVEIS 💙<br>
-                ✅ VALPARAÍSO DE GOIÁS<br>
+                ✅ VALPARAÍSO DE GOIÁS 💙<br>
                 ✅ BRASÍLIA DF E ENTORNO<br>
             </p>
         </section>
