--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -17,6 +17,17 @@
     <link rel="icon" href="img/favicon2.png" type="image/png">
     <link rel="apple-touch-icon" href="img/favicon2.png">
 
+ <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-71WQ023PX4');
+    </script>
+
+    
     <style>
         /* --- Reset e Configurações Globais --- */
         :root {
