--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -193,8 +193,8 @@
         <!-- SEÇÃO DO PERFIL -->
         <header class="profile">
             <img src="img/logo.png" alt="Logo MontaTech Brasil" class="logo">
-            <h1>MontaTech Brasil</h1>
-            <p>⚒️ MONTAGEM DE MÓVEIS</p>
+            <h1>⚒️ MONTAGEM DE MÓVEIS</h1>
+            <p>MontaTech Brasil</p>
         </header>
 
         <!-- TEXTO INTRODUTÓRIO -->
