--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     </script>
 
     
+
+TAGS GOOGLE ADS
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17641071678"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17641071678');
+</script>
+
+
+    
     <style>
         * {
             margin: 0;
