--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -27,6 +27,29 @@
       gtag('config', 'G-71WQ023PX4');
     </script>
 
+ <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-71WQ023PX4');
+    </script>
+
+    
+
+TAGS GOOGLE ADS
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17641071678"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17641071678');
+</script>
     
     <style>
         /* --- Reset e Configurações Globais --- */
