--- a/cartaovirtual.html
+++ b/cartaovirtual.html
@@ -227,13 +227,10 @@
         <!-- BOTÕES DE AÇÃO -->
         <section class="action-buttons">
             <a href="https://wa.me/5561998865417" class="btn-whatsapp" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-whatsapp"></i> Agende Pelo WhatsApp
-            </a>
-            <a href="http://montatechbrasil.com.br/" class="btn-site" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-globe"></i> Visite Nosso Site
+                <i class="fab fa-whatsapp"></i> AGENDAR PELO WHATSAPP
             </a>
             <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" class="btn-magalu" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-store"></i> Visite Nossa Loja da Magalu
+                <i class="fas fa-store"></i> MOVÉIS NOVOS NA LOJA ONLINE
             </a>
         </section>
 
@@ -259,6 +256,10 @@
         </section>
 
     </div>
-
+    
+     <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/49534387.js"></script>
+<!-- End of HubSpot Embed Code -->
+    
 </body>
 </html>
