--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <i class="fab fa-whatsapp"></i> AGENDAR PELO WHATSAPP
             </a>
             <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" class="btn-magalu" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-store"></i> MOVÉIS NOVOS NA LOJA ONLINE
+                <i class="fas fa-store"></i> MOVÉIS NOVOS NA LOJA
             </a>
         </section>
 
