--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MontaTech Brasil - Cartão de Visita Digital</title>
-    
+    <title>MontaTech Brasil | Montagens de Móveis em Valparaíso de Goiás, DF e entorno | Agende Um Montador de Móveis</title>
+    <meta name="description" content="Confira nossos preços de montagem de móveis em valparaíso de goiás, Brasília DF e cidades do entorno. Fale conosco e garanta desconto especial! Atendimento personalizado. Agende hoje mesmo a vista de um montador de movéis profissional.">
+
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,16 +17,6 @@
     <!-- Favicon -->
     <link rel="icon" href="img/favicon2.png" type="image/png">
     <link rel="apple-touch-icon" href="img/favicon2.png">
-
- <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-71WQ023PX4');
-    </script>
 
  <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
