--- a/dev.html
+++ b/dev.html
@@ -172,16 +172,16 @@
             </div>
         </div>
         <p class="mt-12 text-lg text-gray-700 font-semibold">
-            Nossa missão é transformar a experiência de montagem de móveis em algo <strong class="color-primary">fácil, seguro e digital</strong>.
+            Nossa missão é transformar a experiência de montagem de móveis em algo <strong class="color-primary">que complemente o sonho da compra do seu móvel</strong>.
         </p>
     </div>
 </section>
 
 <section id="agendamento" class="py-20 bg-primary text-white">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black mb-6">Agendamento Online Rápido e Eficiente</h2>
+        <h2 class="text-3xl lg:text-4xl font-black mb-6">Orçamento Online Detalhado</h2>
         <p class="text-lg text-white/90 mb-8">
-            Prefere agendar fora do horário comercial? Utilize nosso formulário online para garantir seu horário. Nossa equipe entrará em contato para confirmar **dentro de 10 minutos** no horário comercial.
+            Precisa de orçamento detalhado de montagem de móveis para sua mudança? Utilize nosso formulário online para garantir seu horário. Garanta um profissional de montagem para ajudar no processo. 
         </p>
 
         <a href="[LINK DO SEU GOOGLE FORMS DE AGENDAMENTO]" target="_blank" class="bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 inline-block">
