--- a/dev.html
+++ b/dev.html
@@ -179,13 +179,13 @@
 
 <section id="agendamento" class="py-20 bg-primary text-white">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black mb-6">Orçamento Online Detalhado</h2>
+        <h2 class="text-3xl lg:text-4xl font-black mb-6">Vai Mudar de Casa?</h2>
         <p class="text-lg text-white/90 mb-8">
-            Precisa de orçamento detalhado de montagem de móveis para sua mudança? Utilize nosso formulário online para garantir seu horário. Garanta um profissional de montagem para ajudar no processo. 
+            Está de mudança e precisa de ajuda para com a montagem dos seus móveis? Garanta antecipadamente a presença de montador de móveis profissional no dia e hora certa. Utilize nosso formulário online e garanta seu horário. 
         </p>
 
         <a href="[LINK DO SEU GOOGLE FORMS DE AGENDAMENTO]" target="_blank" class="bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 inline-block">
-            📅 RESERVAR HORÁRIO ONLINE
+            📅 SOLITICAR ORÇAMENTO
         </a>
         
         <p class="mt-4 text-sm font-semibold text-white/80">Seu agendamento será processado rapidamente por nossa equipe.</p>
