--- a/dev.html
+++ b/dev.html
@@ -181,19 +181,19 @@
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <h2 class="text-3xl lg:text-4xl font-black mb-6">Vai Mudar de Casa?</h2>
         <p class="text-lg text-white/90 mb-8">
-            Está de mudança e precisa de ajuda para com a montagem dos seus móveis? Garanta antecipadamente a presença de montador de móveis profissional no dia e hora certa. Utilize nosso formulário online e garanta seu horário. 
+            Está de mudança e precisa de ajuda com a montagem dos seus móveis? Garanta antecipadamente a presença de montador de móveis profissional no dia e hora certa. Utilize nosso formulário online e garanta seu horário. 
         </p>
 
-        <a href="[LINK DO SEU GOOGLE FORMS DE AGENDAMENTO]" target="_blank" class="bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 inline-block">
+        <a href="https://forms.gle/Ex9kZN46U6pAsuto6" target="_blank" class="bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 inline-block">
             📅 SOLITICAR ORÇAMENTO
         </a>
         
-        <p class="mt-4 text-sm font-semibold text-white/80">Seu agendamento será processado rapidamente por nossa equipe.</p>
+        <p class="mt-4 text-sm font-semibold text-white/80">Evite Imprevistos Tenha Agendado Profissional de Confiança e Resposabilidade.</p>
 
         <div class="mt-12 text-center border-t border-white/20 pt-8">
-            <h3 class="text-xl font-bold mb-4">Ou se preferir, a via mais rápida é o WhatsApp:</h3>
+            <h3 class="text-xl font-bold mb-4">Ou Agende Um Montador Agora Mesmo:</h3>
             <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="bg-inovacao text-white font-black px-10 py-4 rounded-lg hover:opacity-90 transition-opacity inline-block">
-                📲 FALE COM O GESTOR AGORA
+                📲 FALE AGORA
             </a>
         </div>
     </div>
@@ -201,17 +201,17 @@
 
 <section id="provas-sociais" class="py-20 bg-slate-50">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">Clientes Satisfeitos em Valparaíso e DF</h2>
-        <p class="text-lg text-gray-600 mb-12">Veja o que nossos clientes dizem sobre a pontualidade e qualidade do nosso serviço.</p>
+        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">Veja o Que Nossos Clientes DizemF</h2>
+        <p class="text-lg text-gray-600 mb-12">Veja o que nossos clientes dizem sobre a pontualidade e qualidade do nosso serviço na cidade Valparaíso de Goiás.</p>
 
         <div x-data="{ 
                 currentSlide: 0, 
                 reviews: [
-                    { text: 'Fiquei bastante satisfeita com a prestação de serviço. Tratam-se de profissionais capacitados, atenciosos com o cliente e com a qualidade do trabalho, são também pontuais, e bem criteriosos com a organização e a higiene do ambiente. Recomendo a contratação', author: 'Emmanuele', city: 'Flores da Serra' },
-                    { text: 'Ficou muito bom o serviço, tem cuidado com os detalhes.', author: 'Elaido Salles', city: 'Cidade Jardins' },
-                    { text: 'Recomendo! Rapidez e eficiência estão juntas👏👏👏👏👍', author: 'GiL', city: 'Valparaíso 1 Etapa D' },
-                    { text: 'Tive uma experiência muito boa, gostei demais.', author: 'Silvone', city: 'Condomínio Paris' },
-                    { text: 'Muito prestativo e responsável, gostei do trabalho!', author: 'Aparecida', city: 'Condomínio Gren Park' }
+                    { text: 'Flores da Serra', author: 'Emmanuele', city: 'Fiquei bastante satisfeita com a prestação de serviço. Tratam-se de profissionais capacitados, atenciosos com o cliente e com a qualidade do trabalho, são também pontuais, e bem criteriosos com a organização e a higiene do ambiente. Recomendo a contratação' },
+                    { text: 'Cidade Jardins', author: 'Elaido Salles', city: 'Ficou muito bom o serviço, tem cuidado com os detalhes.' },
+                    { text: 'Etapa D', author: 'GiL', city: 'Recomendo! Rapidez e eficiência estão juntas👏👏👏👏👍' },
+                    { text: 'Condomínio Paris', author: 'Silvone', city: 'Tive uma experiência muito boa, gostei demais.' },
+                    { text: 'Condomínio Gren Park', author: 'Aparecida', city: 'Muito prestativo e responsável, gostei do trabalho!' }
                 ],
                 next() { this.currentSlide = (this.currentSlide + 1) % this.reviews.length; },
                 prev() { this.currentSlide = (this.currentSlide - 1 + this.reviews.length) % this.reviews.length; },
