--- a/dev.html
+++ b/dev.html
@@ -258,7 +258,7 @@
         <p class="text-lg text-gray-700 mt-16 mb-6 font-semibold">
             Confira mais avaliações e deixe a sua no nosso perfil oficial do Google:
         </p>
-        <a href="[LINK DO SEU GOOGLE MEU NEGÓCIO PARA AVALIAÇÕES]" target="_blank" class="inline-block bg-inovacao text-white font-black text-lg px-8 py-3 rounded-lg hover:bg-green-600 transition-colors shadow-lg">
+        <a href="https://www.google.com/search?sca_esv=2e386fd74801b194&sxsrf=AE3TifM7yhQOmcLovJgUNzabYiv4BCQ6lg%3A1760811800194&q=MontaTechBrasil&stick=H4sIAAAAAAAAAONgU1I1qDAxMzVOMrUwSE6xNDQxNDW2MqhINrW0SDG0SLE0MDBMMrBMXsTK75ufV5IYkpqc4VSUWJyZAwD4DVMjOwAAAA&mat=Ca9UXyXJz28t&ved=2ahUKEwj1vveOr66QAxUVP7kGHXt7KpYQrMcEegQIDxAC" target="_blank" class="inline-block bg-inovacao text-white font-black text-lg px-8 py-3 rounded-lg hover:bg-green-600 transition-colors shadow-lg">
             ⭐ VER AVALIAÇÕES NO GOOGLE
         </a>
         </div>
