--- a/dev.html
+++ b/dev.html
@@ -143,7 +143,7 @@
                 📲 AGENDAR MONTAGEM
             </a>
             
-            <p class="mt-4 font-semibold text-white/90">Fale agora pelo Whatsapp.</p>
+            <p class="mt-4 font-semibold text-white/90">Fale Agora Pelo Whatsapp.</p>
         </div>
     </div>
 </section>
