--- a/dev.html
+++ b/dev.html
@@ -116,7 +116,7 @@
         <a @click="openMenu = false" href="#contato" class="hover:text-color-accent transition-colors">Contato</a>
         <a @click="openMenu = false" href="#faq" class="hover:text-color-accent transition-colors">FAQ</a>
         <a @click="openMenu = false" href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" class="bg-accent text-black px-8 py-3 rounded-lg hover:opacity-90 mt-8">
-            📅 AGENDAMENTO ONLINE
+            📅 AGENDAR HORÁRIO
         </a>
     </div>
 </div>
@@ -201,7 +201,7 @@
 
 <section id="provas-sociais" class="py-20 bg-slate-50">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">Veja o Que Nossos Clientes DizemF</h2>
+        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">Veja o Que Nossos Clientes Dizem</h2>
         <p class="text-lg text-gray-600 mb-12">Veja o que nossos clientes dizem sobre a pontualidade e qualidade do nosso serviço na cidade Valparaíso de Goiás.</p>
 
         <div x-data="{ 
