--- a/dev.html
+++ b/dev.html
@@ -319,14 +319,14 @@
 </section>
 
 <section id="contato" class="pb-20">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-br from-[#0e3d71] to-[#045ebf] rounded-2xl p-12"> <h2 class="text-3xl font-black mb-4 text-white">Pronto para sua Montagem sem Estresse?</h2>
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-br from-[#0e3d71] to-[#045ebf] rounded-2xl p-12"> <h2 class="text-3xl font-black mb-4 text-white">Vamos Agendar Sua Montagem?</h2>
         <p class="text-xl text-white/90 mb-8 max-w-2xl mx-auto"><strong>Agende agora sua montagem profissional e garanta a segurança e durabilidade do seu móvel.</strong></p>
         
         <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105">
-            CHAMAR NO WHATSAPP AGORA
+            FALE AGORA
         </a>
         
-        <p class="mt-4 text-lg font-semibold text-white/90">Atendimento 24h em Valparaíso e DF.</p>
+        <p class="mt-4 text-lg font-semibold text-white/90">Atendimento rápido e de confiança.</p>
     </div>
 </section>
 </main>
