--- a/dev.html
+++ b/dev.html
@@ -218,7 +218,7 @@
         <div class="mt-12 text-center border-t border-white/20 pt-8">
             <h3 class="text-xl font-bold mb-4">Ou Agende Um Montador Agora Mesmo:</h3>
             <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="bg-inovacao text-white font-black px-10 py-4 rounded-lg hover:opacity-90 transition-opacity inline-block">
-                📲 FALE AGORA
+                📲 AGENDAR
             </a>
         </div>
     </div>
