--- a/dev.html
+++ b/dev.html
@@ -141,7 +141,7 @@
         <a @click="openMenu = false" href="#contato" class="hover:text-color-accent transition-colors">Contato</a>
         <a @click="openMenu = false" href="#faq" class="hover:text-color-accent transition-colors">FAQ</a>
         <a @click="openMenu = false" href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" class="bg-accent text-black px-8 py-3 rounded-lg hover:opacity-90 mt-8">
-            📅 AGENDAR HORÁRIO
+            📅 AGENDAR MO
         </a>
     </div>
 </div>
@@ -315,7 +315,7 @@
                     <span :class="{'rotate-180': openAccordion === 2, 'text-white': openAccordion === 2, 'color-accent': openAccordion !== 2}" class="transform transition-transform duration-300 text-2xl font-light">▾</span>
                 </button>
                 <div x-show="openAccordion === 2" x-collapse class="p-6 text-gray-600 bg-white">
-                    <p>O orçamento é dado após a análise do seu móvel (via WhatsApp ou Forms). Você paga apenas após a conclusão do serviço! Aceitamos **Pix** e **Cartões de Crédito/Débito** (com pequena taxa). Para empresas e parcerias, a cobrança é formalizada via boleto ou Pix agendado.</p>
+                    <p>O orçamento é dado após a análise do seu móvel (via WhatsApp ou Forms). Você paga apenas após a conclusão do serviço! Aceitamos Pix e Cartões de Crédito/Débito (com pequena taxa). Para empresas e parcerias, a cobrança é formalizada via boleto ou Pix agendado.</p>
                 </div>
             </div>
 
