--- a/dev.html
+++ b/dev.html
@@ -109,7 +109,7 @@
                 <a href="#contato" class="text-gray-600 hover:text-color-secondary font-semibold transition-colors">Contato</a>
                 <a href="#faq" class="text-gray-600 hover:text-color-secondary font-semibold transition-colors">FAQ</a>
                 <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" class="hidden md:inline-block bg-primary text-white font-bold px-6 py-2 rounded-lg hover:opacity-90 transition-opacity">
-                    📅 AGENDAMENTO 
+                    📅 AGENDAR MONTAGEM 
                 </a>
             </div>
 
@@ -141,7 +141,7 @@
         <a @click="openMenu = false" href="#contato" class="hover:text-color-accent transition-colors">Contato</a>
         <a @click="openMenu = false" href="#faq" class="hover:text-color-accent transition-colors">FAQ</a>
         <a @click="openMenu = false" href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" class="bg-accent text-black px-8 py-3 rounded-lg hover:opacity-90 mt-8">
-            📅 AGENDAR MO
+            📅 AGENDAR MONTAGEM
         </a>
     </div>
 </div>
