--- a/dev.html
+++ b/dev.html
@@ -363,8 +363,8 @@
             <p class="empresa-descricao mb-4 text-gray-300">Montagem de Móveis Profissional & Sistema de Gestão</p>
             
             <div class="contatos mb-4 text-gray-200 space-y-1">
-                <p><strong>Área de Atendimento:</strong> Valparaíso de Goiás | Brasília DF e Região</p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/5561998865417" target="_blank" class="hover:text-accent transition-colors">(61) 9 9886-5417</a></p>
+                <p><strong>Atendemos em</strong> Valparaíso de Goiás | Brasília DF e Região</p>
+                <p><strong>Contato:</strong> <a href="https://wa.me/5561998865417" target="_blank" class="hover:text-accent transition-colors">(61) 9 9886-5417</a></p>
             </div>
             
             <div class="social-icons flex space-x-6 mb-8">
