--- a/dev.html
+++ b/dev.html
@@ -359,8 +359,8 @@
 <footer class="bg-primary text-white">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <div class="flex flex-col items-center text-center">
-            <img src="img/logo-clara.png" alt="MontaTech Brasil Logo" class="h-16 mb-4">
-            <p class="empresa-descricao mb-4 text-gray-300">Montagem de Móveis Profissional & Sistema de Gestão</p>
+            <img src="img/logo2.png" alt="MontaTech Brasil Logo" class="h-16 mb-4">
+            <p class="empresa-descricao mb-4 text-gray-300">Gestão Profissional de Montagem de Móveis</p>
             
             <div class="contatos mb-4 text-gray-200 space-y-1">
                 <p><strong>Atendemos em</strong> Valparaíso de Goiás | Brasília DF e Região</p>
@@ -371,8 +371,7 @@
                 <a href="https://wa.me/5561998865417" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/whatsapp.png" alt="WhatsApp" class="h-8"></a>
                 <a href="https://www.instagram.com/montatechbrasil.montagens/" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/instagram.png" alt="Instagram" class="h-8"></a>
                 <a href="https://www.facebook.com/montatechbrasil" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/facebook.png" alt="Facebook" class="h-8"></a>
-                <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" target="_blank" class="transform hover:scale-110 transition-transform">
-                    <img src="img/magalu.png" alt="Loja Magazine Luiza" class="h-8">
+                <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/magalu.png" alt="Loja Magazine Luiza" class="h-8">
                 </a>
             </div>
             
