--- a/dev.html
+++ b/dev.html
@@ -370,7 +370,7 @@
             <div class="social-icons flex space-x-6 mb-8">
                 <a href="https://wa.me/5561998865417" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/whatsapp.png" alt="WhatsApp" class="h-8"></a>
                 <a href="https://www.instagram.com/montatechbrasil.montagens/" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/instagram.png" alt="Instagram" class="h-8"></a>
-                <a href="https://www.facebook.com/montatechbrasil" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/facebook.png" alt="Facebook" class="h-8"></a>
+                <a href="https://www.facebook.com/montatechbrasil.montagens" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/facebook.png" alt="Facebook" class="h-8"></a>
                 <a href="https://www.magazinevoce.com.br/magazinemontatechbrasil/busca/moveis/" target="_blank" class="transform hover:scale-110 transition-transform"><img src="img/magalu.png" alt="Loja Magazine Luiza" class="h-8">
                 </a>
             </div>
