--- a/dev.html
+++ b/dev.html
@@ -376,7 +376,7 @@
             </div>
             
             <div class="footer-copyright-section border-t border-white/20 w-full pt-6 mt-4">
-                <p class="text-gray-400 text-sm">&copy; 2024 MontaTech Brasil | Todos os direitos reservados. CNPJ 47.965.734/0001-07</p>
+                <p class="text-gray-400 text-sm">&copy; 2025 MontaTech Brasil | Serviços com Garantia e Nota Fiscal | Todos os Direitos Reservados. </p>
             </div>
         </div>
     </div>
