--- a/dev.html
+++ b/dev.html
@@ -101,7 +101,7 @@
 <header class="bg-white/90 backdrop-blur-md fixed top-0 w-full z-50 shadow-md">
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center py-3">
-            <a href="#"><img src="img/logo2.png" alt="MontaTech Brasil Logo" class="h-12"></a>
+            <a href="#"><img src="img/logo.png" alt="MontaTech Brasil Logo" class="h-12"></a>
             
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#sobre" class="text-gray-600 hover:text-color-secondary font-semibold transition-colors">Sobre</a>
