--- a/dev.html
+++ b/dev.html
@@ -204,7 +204,7 @@
 
 <section id="agendamento" class="py-20 bg-primary text-white">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black mb-6">Vai Mudar de Casa?</h2>
+        <h2 class="text-3xl lg:text-4xl font-black mb-6">Está Planejando Se Mudar?</h2>
         <p class="text-lg text-white/90 mb-8">
             Está de mudança e precisa de ajuda com a montagem dos seus móveis? Garanta antecipadamente a presença de montador de móveis profissional no dia e hora certa. Utilize nosso formulário online e garanta seu horário. 
         </p>
