--- a/dev.html
+++ b/dev.html
@@ -164,7 +164,7 @@
         <div class="max-w-4xl mx-auto text-center">
             <p class="text-2xl md:text-3xl font-black mb-6 color-accent">Agende Seu Serviço Agora:</p>
             
-            <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 border-2 border-white">
+            <a href="#contato" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 border-2 border-white">
                 📲 AGENDAR MONTAGEM
             </a>
             
