--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="MontaTech Brasil">
     
    <!-- FAVICON ADICIONADO AQUI -->
-    <link rel="icon" href="img/favicon2.png" type="image/png">
-    <link rel="apple-touch-icon" href="img/favicon2.png">
+    <link rel="icon" href="img/favicon2.png" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="img/favicon2.png">  
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
