--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR" style="scroll-behavior: smooth;">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>MontaTech Brasil | Montagem de Móveis Profissional em Valparaíso e DF</title>
-    <meta name="description" content="Montagem de Móveis Profissional e com garantia em Valparaíso de Goiás, Brasília DF e Regiões. Serviços Residenciais e Comerciais.">
-    <meta name="keywords" content="montagem de móveis df, montador de móveis valparaíso, montador profissional, montagem de guarda-roupa, montagem de cozinha, montador de móveis brasilia, montatech brasil">
+    <title>Montador de Móveis em Valparaíso e Brasília DF | MontaTech</title>
+    <meta name="description" content="Montagem de Móveis com Garantia Formal em Valparaíso de Goiás, Brasília DF e Cidades do Entorno. Agendamento Rápido Pelo WhatsApp.">
+    <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis df, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
     <meta name="author" content="MontaTech Brasil">
     
    <!-- FAVICON ADICIONADO AQUI -->
