--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Montador de Móveis em Valparaíso e Brasília DF | MontaTech</title>
-    <meta name="description" content="Montagem de Móveis com Garantia Formal em Valparaíso de Goiás, Brasília DF e Cidades do Entorno. Agendamento Rápido Pelo WhatsApp.">
+    <title>Montador de Móveis Valparaíso e Brasília DF | MontaTech</title>
+    <meta name="description" content="Montagem de Móveis Profissional e com Garantia Formal em Valparaíso de Goiás, Brasília DF e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
     <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis df, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
     <meta name="author" content="MontaTech Brasil">
     
