--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         
         <div class="text-center mb-16">
             <h1 class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl font-black mb-4 leading-tight text-white">
-                Montagem de Móveis <span class="color-accent">Profissional</span> e com Garantia
+                Montagem de Móveis Profissional em <span class="color-accent">Valparaíso de Goiás</span> e Brasília DF.
             </h1>
             <p class="max-w-4xl mx-auto text-xl md:text-2xl text-white font-semibold mt-4">
                 ✅ Residenciais e Comerciais em <strong class="text-inovacao">Valparaíso de Goiás, Brasília DF</strong> e Regiões.
