--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 Montagem de Móveis Profissional em <span class="color-accent">Valparaíso de Goiás</span> e Brasília DF.
             </h1>
             <p class="max-w-4xl mx-auto text-xl md:text-2xl text-white font-semibold mt-4">
-                ✅ Residenciais e Comerciais em <strong class="text-inovacao">Valparaíso de Goiás, Brasília DF</strong> e Regiões.
+                ✅ Atendimento rápido em toda região <strong class="text-inovacao">agende e garanta sua montagem</strong> agora mesmo.
                 <br>
-                💙 Faça um orçamento detalhado ou agende um horário com um montador agora mesmo.
+                  ✅ Oferecemos serviços de qualidade com garantia e nota fisca.
             </p>
         </div>
         
