--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 Montagem de Móveis Profissional em <span class="color-accent">Valparaíso de Goiás</span> e Brasília DF.
             </h1>
             <p class="max-w-4xl mx-auto text-xl md:text-2xl text-white font-semibold mt-4">
-                ✅ Atendimento Rápido e Eficiente em Toda Região <strong class="text-inovacao">Agende Agora Sua Montagem</strong>
+                ✅ Atendimento Rápido e Eficiente <strong class="text-inovacao">Agende Agora Sua Montagem</strong>
                 <br>
                   ✅ Oferecemos Serviços de Qualidade com Garantia e Nota fiscal.
             </p>
