--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                 Montagem de Móveis Profissional em <span class="color-accent">Valparaíso de Goiás</span> e Brasília DF.
             </h1>
             <p class="max-w-4xl mx-auto text-xl md:text-2xl text-white font-semibold mt-4">
-                ✅ Atendimento Rápido e Eficiente <strong class="text-inovacao">Agende Agora Sua Montagem</strong>
+                ✅ Atendimento Rápido e Eficiente. <strong class="text-inovacao">Agende Agora Sua Montagem.</strong>
                 <br>
                   ✅ Oferecemos Serviços de Qualidade com Garantia e Nota fiscal.
             </p>
         </div>
         
         <div class="max-w-4xl mx-auto text-center">
-            <p class="text-2xl md:text-3xl font-black mb-6 color-accent">Agende Seu Serviço Agora:</p>
+            <p class="text-2xl md:text-3xl font-black mb-6 color-accent">Qual é o Melhor Horário?</p>
             
             <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105 border-2 border-white">
                 📲 AGENDAR MONTAGEM
