--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 <section id="agendamento" class="py-20 bg-primary text-white">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black mb-6">Está Planejando Se Mudar?</h2>
+        <h2 class="text-3xl lg:text-4xl font-black mb-6">Precisa de Desmontagem e Montagem de Móveis para a Mudança?</h2>
         <p class="text-lg text-white/90 mb-8">
             Está de mudança e precisa de ajuda com a montagem dos seus móveis? Garanta antecipadamente a presença de montador de móveis profissional no dia e hora certa. Utilize nosso formulário online e garanta seu horário. 
         </p>
@@ -225,7 +225,7 @@
 
 <section id="provas-sociais" class="py-20 bg-slate-50">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">O Que Nossos Clientes Dizem?</h2>
+        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">O Que Nossos Clientes Dizem Sobre a Montagem?</h2>
         <p class="text-lg text-gray-600 mb-12">Veja o que nossos clientes dizem sobre a pontualidade e qualidade do nosso serviço na cidade Valparaíso de Goiás.</p>
 
         <div x-data="{ 
@@ -343,7 +343,7 @@
 </section>
 
 <section id="contato" class="pb-20">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-br from-[#0e3d71] to-[#045ebf] rounded-2xl p-12"> <h2 class="text-3xl font-black mb-4 text-white">Vamos Agendar Sua Montagem?</h2>
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-br from-[#0e3d71] to-[#045ebf] rounded-2xl p-12"> <h2 class="text-3xl font-black mb-4 text-white">Pronto para Agendar Sua Montagem Profissional?</h2>
         <p class="text-xl text-white/90 mb-8 max-w-2xl mx-auto"><strong>Agende agora sua montagem profissional e garanta a segurança e durabilidade do seu móvel.</strong></p>
         
         <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105">
